# sample-pypi-package

./: README.md  build.ps1  pyproject.toml  version-config.json
.github/workflows/: continuous-integration.yml  development-workflow.yml  package2-ci.yml  publish-to-pypi.yml
src/readyperfectly/: example.py
src/readyperfectly/mult_package/: example.py
src/readyperfectly/sample_package2/: example2.py
