[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "readyperfectly-sample-package"
version = "0.0.1"
authors = [
    { name="Ong Zhi Xian", email="zhixian@hotmail.com" },
]
description = "Sample to demostrate writing Python packages"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ongzhixian/sample-pypi-package/wiki"
Issues = "https://github.com/ongzhixian/sample-pypi-package/issues"
